--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>                                  
         </div>
         <div class="save">
-            <input type="button" id="submit" value="Save" onclick="saveSettings();">
+            <input type="button" id="submit" value="Save">
             <span id="saved-settings"></span>
         </div>
         </form>
