--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
             <div class="settings-group">
                 <div class="settings-item">
                     <label for="pomodoro">Pomodoro</label>
-                    <input id="pomodoro" type="text" name="pomodoro" placeholder="25:00">
+                    <input id="pomodoro" type="text" name="pomodoro" placeholder="25:00" cl-input>
                 </div>
                 <div class="settings-item">
                     <label for="short">Short Break</label>
-                <input id="short" type="text" name="short" placeholder="5:00">
+                <input id="short" type="text" name="short" placeholder="5:00" cl-input>
                 </div>
                 <div class="settings-item">
                     <label for="long">Long Break</label>
-                <input id="long" type="text" name="long" placeholder="15:00">
+                <input id="long" type="text" name="long" placeholder="15:00" cl-input>
                 </div>                                  
         </div>
         <div class="save">
